==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/ai_generated/stm32/src/dma/implementations/doc_ds_160/hal_ll_dma.c <==
#include "hal_ll_rcc.h"
#include "hal_ll_dma.h"
#include "hal_ll_gpio.h"
#define HAL_LL_DMA_IT_FT ((uint32_t)(1U << 1))
#define HAL_LL_DMA_IT_HT ((uint32_t)(1U << 2))
#define HAL_LL_DMA_IT_ET ((uint32_t)(1U << 3))
#define HAL_LL_DMA_IT_CLEAR_MASK (0x0fUL)
#define HAL_LL_DMA_CCR_PRIORITY_VERY_HIGH_MASK (0x00003000)
#define HAL_LL_DMA_CCR_PRIORITY_HIGH_MASK (0x00002000)
#define HAL_LL_DMA_CCR_PRIORITY_MEDIUM_MASK (0x00001000)
#define HAL_LL_DMA_CCR_PRIORITY_LOW_MASK (0x00000000)
#define HAL_LL_DMA_CCR_CIRC_MASK (0x00000020)
#define HAL_LL_DMA_CCR_PSIZE_BYTE_MASK (0x00000000)
#define HAL_LL_DMA_CCR_PSIZE_HALFWORD_MASK (0x00000100)
#define HAL_LL_DMA_CCR_PSIZE_WORD_MASK (0x00000200)
#define HAL_LL_DMA_MSIZE_BYTE_MASK (0x00000000)
#define HAL_LL_DMA_MSIZE_HALFWORD_MASK (0x00000400)
#define HAL_LL_DMA_MSIZE_WORD_MASK (0x00000800)
#define HAL_LL_DMA_MINC_MASK (0x00000080)
#define HAL_LL_DMA_PINC_MASK (0x00000040)
#define HAL_LL_DMA_DIRECTION_MEMORY_TO_MEMORY_MASK (0x4000)
#define HAL_LL_DMA_DIRECTION_MEMORY_TO_PERIPH_MASK (0x10)
#define HAL_LL_DMA_DIRECTION_PERIPH_TO_MEMORY_MASK (0x0)
#define HAL_LL_DMA_CCR_PSIZE_MASK (0x00000300)
#define HAL_LL_DMA_CCR_MSIZE_MASK (0x00000C00)
#define HAL_LL_DMA_CCR_PRIO_MASK (0x00003000)
#define HAL_LL_DMA_CCR_EN_BIT (0)
#define HAL_LL_DMA_CCR_TEIE_BIT (3)
#define HAL_LL_DMA_CCR_HTIE_BIT (2)
#define HAL_LL_DMA_CCR_TCIE_BIT (1)
#define HAL_LL_DMA_CCR_DIR_BIT (4)
#define HAL_LL_DMA_CCR_CIRC_BIT (5)
#define HAL_LL_DMA_CCR_PINC_BIT (6)

hal_ll_err_t hal_ll_dma_init( hal_ll_dma_t *obj ) {
    hal_ll_err_t status = HAL_LL_DMA_SUCCESS;

    // Enable PWRCLK.
    #ifdef HAL_LL_PWRCLK_BASE
    _HAL_LL_ENABLE_CLOCK_PWR_;
    #endif

    // Enable current stream clock.
    hal_ll_dma_clock_set( obj, true );

    // Initialize current stream.
    obj->handle = hal_ll_dma_get_stream_address( obj->module, obj->stream );
    status = hal_ll_dma_init_hw( obj,
                                (dma_handle_t *)obj->handle,
                                 obj->config );

    if ( HAL_LL_DMA_SUCCESS != status ) {
        obj->handle = 0;  // If initialization failed, reset handle.
    }

    return status;
}

hal_ll_err_t hal_ll_dma_set_parameters( hal_ll_dma_t *obj, uint32_t addr_src, uint32_t addr_dst, size_t transfer_size, hal_ll_dma_source_memory_region_t src_mem_type ) {
    dma_handle_t *dma = (dma_handle_t *)obj->handle;
    uint8_t ndtr_divisor;

    // This parameter is not relevant on this architecture.
    (void)src_mem_type;

    // Configure DMA Stream data length.
    switch ( obj->config.data_align_destination ) {
        case HAL_LL_DMA_DATA_ALIGN_BYTES_1:
        case HAL_LL_DMA_DATA_ALIGN_BYTES_2:
            ndtr_divisor = obj->config.data_align_destination;
            break;
        case HAL_LL_DMA_DATA_ALIGN_BYTES_4:
            ndtr_divisor = 2;
            break;

        default:
            return HAL_LL_DMA_ERROR;
    }
    dma->ndtr = transfer_size >> ndtr_divisor;

    // Memory to Peripheral.
    if ( HAL_LL_DMA_DIRECTION_MEMORY_TO_PERIPH == obj->config.direction ) {
        // Configure DMA stream destination address.
        dma->par = addr_dst;
        // Configure DMA stream source address.
        dma->mar = addr_src;
    } else {  // Peripheral to Memory.
        // Configure DMA stream source address.
        dma->par = addr_src;
        // Configure DMA stream destination address.
        dma->mar = addr_dst;
    }
    return HAL_LL_DMA_SUCCESS;
}

hal_ll_err_t hal_ll_dma_transfer_abort( hal_ll_dma_t *obj ) {
    hal_ll_err_t status = HAL_LL_DMA_SUCCESS;
    dma_handle_t *dma = (dma_handle_t *)obj->handle;

    // Calculate DMA base and stream number.
    dma_isr_registers_t *regs = (dma_isr_registers_t *)(dma_controller[obj->module].stream_base - CCR_BASE_OFFSET);

    // Disable all the transfer interrupts.
    dma->cr &= ~(HAL_LL_DMA_CCR_TCIE_BIT | HAL_LL_DMA_CCR_HTIE_BIT | HAL_LL_DMA_CCR_TEIE_BIT);

    // Disable the stream.
    HAL_LL_DMA_MODULE_DISABLE( dma );

    // Wait for bit to be cleared.
    status = hal_ll_dma_is_module_disabled( dma );

    // Clear all interrupt flags at correct offset within the register.
    if ( HAL_LL_DMA_SUCCESS == status )
        regs->ifcr = HAL_LL_DMA_IT_CLEAR_MASK << ( obj->stream * 4 );

    return status;
}

static hal_ll_err_t hal_ll_dma_init_hw( hal_ll_dma_t *obj, dma_handle_t *dma, hal_ll_dma_config_t config ) {
    volatile uint32_t tmp = 0UL;
    // Check if user entered invalid data aka HAL_LL_DMA_DATA_ALIGN_BYTES_3
    if (HAL_LL_DMA_DATA_ALIGN_BYTES_3 == config.data_align_source || HAL_LL_DMA_DATA_ALIGN_BYTES_3 == config.data_align_destination ) {
        return HAL_LL_DMA_ERROR;
    }

    // Disable the peripheral first.
    HAL_LL_DMA_MODULE_DISABLE(dma);

    // Wait for bit to be cleared.
    if ( HAL_LL_DMA_ERROR == hal_ll_dma_is_module_disabled( dma ) )
        return HAL_LL_DMA_ERROR;

    // Get the CR register value.
    tmp = dma->cr;

    // Clear CHSEL, MBURST, PBURST, PL, MSIZE, PSIZE, MINC, PINC, CIRC, DIR, CT and DBM bits.
    tmp &= ((uint32_t)~( HAL_LL_DMA_CCR_EN_BIT | HAL_LL_DMA_CCR_TCIE_BIT | HAL_LL_DMA_CCR_HTIE_BIT | \
                        HAL_LL_DMA_CCR_TEIE_BIT | HAL_LL_DMA_CCR_DIR_BIT | HAL_LL_DMA_CCR_CIRC_BIT | \
                        HAL_LL_DMA_CCR_PINC_BIT | HAL_LL_DMA_CCR_MINC_BIT | HAL_LL_DMA_CCR_M2M_BIT | \
                        HAL_LL_DMA_CCR_PSIZE_MASK | HAL_LL_DMA_CCR_MSIZE_MASK | HAL_LL_DMA_CCR_PRIO_MASK ));

    // BEGIN Prepare the DMA stream configuration.
    // Set desired direction value.
    tmp |= hal_ll_dma_get_reg_value_direction(config.direction);
    // Set desired memory increment settings.
    tmp |= hal_ll_dma_get_reg_value_src_inc(config.src_inc);
    tmp |= hal_ll_dma_get_reg_value_dst_inc(config.dst_inc);
    // Set desired data size settings.
    tmp |= hal_ll_dma_get_reg_value_source_size(config.data_align_source);
    tmp |= hal_ll_dma_get_reg_value_destination_size(config.data_align_destination);
    // Set desired mode.
    tmp |= hal_ll_dma_get_reg_value_mode(config.mode);
    // Finally, set desired priority.
    tmp |= hal_ll_dma_get_reg_value_priority(config.priority);

    // And then write to DMA stream CR register.
    dma->cr = tmp;

    if (obj->module == 0 ) {
        dmamux_registers_t * dmamux = (dmamux_registers_t*)( DMAMUX1_BASE + ( obj->stream * DMAMUX1_OFFSET ) );
        dmamux->dmamux_cr |= obj->channel;
    } else {
        dmamux_registers_t * dmamux = (dmamux_registers_t*)( DMAMUX1_BASE + ( DMA_NUM_OF_STREAMS * DMAMUX1_OFFSET ) + ( obj->stream * DMAMUX1_OFFSET ) );
        dmamux->dmamux_cr |= obj->channel;
    }

    return HAL_LL_DMA_SUCCESS;
}

static inline uint16_t hal_ll_dma_get_reg_value_direction( hal_ll_dma_direction_t direction ) {
    volatile uint16_t direction_set = (uint8_t)HAL_LL_DMA_DIRECTION_MEMORY_TO_MEMORY;

    switch ( direction )
    {
        case HAL_LL_DMA_DIRECTION_MEMORY_TO_MEMORY:
            direction_set = HAL_LL_DMA_DIRECTION_MEMORY_TO_MEMORY_MASK;
            break;
        case HAL_LL_DMA_DIRECTION_MEMORY_TO_PERIPH:
            direction_set = HAL_LL_DMA_DIRECTION_MEMORY_TO_PERIPH_MASK;
            break;
        case HAL_LL_DMA_DIRECTION_PERIPH_TO_MEMORY:
            direction_set = HAL_LL_DMA_DIRECTION_PERIPH_TO_MEMORY_MASK;
            break;

        default:
            break;
    }

    return (uint16_t)direction_set;
}
