==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/tiva/src/dma/implementation_1/hal_ll_dma.c <==
#include "hal_ll_rcc.h"
#include "hal_ll_dma.h"
#define HAL_LL_DMA_BASE_ADDR                   (0x400FF000UL)
#define HAL_LL_DMA_MEMORY_ALLIGN_1024_MASK     (0x3FFUL)
#define HAL_LL_DMA_SYSCTL_RCGCDMA              (*((volatile uint32_t *)0x400FE60C))
#define HAL_LL_DMA_SYSCTL_RCGCDMA_CLOCK_DMA    (0x1UL)
#define HAL_LL_DMA_SYSCTL_PRDMA                (*((volatile uint32_t *)0x400FEA0C))
#define HAL_LL_DMA_SYSCTL_PRDMA_DMA_READY      (0x1UL)
#define HAL_LL_DMA_DMASTAT_MASTEN              (0x1UL)
#define HAL_LL_DMA_DMACFG_MASTEN               (0x1UL)
#define HAL_LL_DMA_SWREQ                       (0x1UL)
#define HAL_LL_DMA_USEBURSTCLR                 (0x1UL)
#define HAL_LL_DMA_REQMASKCLR                  (0x1UL)
#define HAL_LL_DMA_ENASET                      (0x1UL)
#define HAL_LL_DMA_ENACLR                      (0x1UL)
#define HAL_LL_DMA_STREAM_ENABLED_MASK         (0xFFFFFFFFUL)
#define HAL_LL_DMA_ALTCLR                      (0x1UL)
#define HAL_LL_DMA_PRIOSET                     (0x1UL)
#define HAL_LL_DMA_PRIOCLR                     (0x1UL)
#define HAL_LL_DMA_DMACHCTL_XFERMODE_MASK                         (0x7UL)
#define HAL_LL_DMA_DMACHCTL_XFERMODE_STOP                         (0x0UL)
#define HAL_LL_DMA_DMACHCTL_XFERMODE_BASIC                        (0x1UL)
#define HAL_LL_DMA_DMACHCTL_XFERMODE_AUTO_REQUEST                 (0x2UL)
#define HAL_LL_DMA_DMACHCTL_XFERMODE_PING_PONG                    (0x3UL)
#define HAL_LL_DMA_DMACHCTL_XFERMODE_MEM_SCATTER_GATHER           (0x4UL)

hal_ll_err_t hal_ll_dma_init( hal_ll_dma_t *obj ) {
    hal_ll_err_t status = HAL_LL_DMA_SUCCESS;

    // Enable SYSCLK.
    _HAL_LL_ENABLE_CLOCK_SYS_;

    // Wait until the DMA module is ready for access.
    while ( !( HAL_LL_DMA_SYSCTL_PRDMA & HAL_LL_DMA_SYSCTL_PRDMA_DMA_READY) );

    obj->handle = HAL_LL_DMA_BASE_ADDR;
    status = hal_ll_dma_init_hw( obj,
                                (dma_handle_t *)obj->handle,
                                 obj->config );

    if ( HAL_LL_DMA_SUCCESS != status ) {
        obj->handle = 0;  // If initialization failed, reset handle.
    }

    return status;
}

hal_ll_err_t hal_ll_dma_set_parameters( hal_ll_dma_t *obj, uint32_t addr_src, uint32_t addr_dst, size_t transfer_size, hal_ll_dma_source_memory_region_t src_mem_type ) {
    dma_handle_t *dma = ( dma_handle_t * )obj->handle;
    // Set pointer to 1024 byte aligned address inside dma_ch_ctl_buffer, where actual channel control structure data will be located.
    dma_ch_ctl = (dma_ch_ctl_struct_t *)( ( (uint32_t)dma_ch_ctl_buffer + HAL_LL_DMA_MEMORY_ALLIGN_1024_MASK ) & ~HAL_LL_DMA_MEMORY_ALLIGN_1024_MASK );
    uint8_t transfer_size_shift_divisor = 2; // default value for HAL_LL_DMA_DATA_ALIGN_BYTES_4
    uint8_t stream = obj->config.stream;
    uint16_t endpoint_offset;

    // Memory type parameter is unused.
    (void)src_mem_type;

    // Configure DMA Stream data length.
    if ( HAL_LL_DMA_DATA_ALIGN_BYTES_4 != obj->config.data_align_destination ) {
        transfer_size_shift_divisor = obj->config.data_align_destination;
    }

    // Calculate the address offset of the last buffer item.
    endpoint_offset = transfer_size - ( 1 << transfer_size_shift_divisor );
    // Calculate the source data buffer inclusive endpoint.
    addr_src += obj->config.src_inc ? endpoint_offset : 0;
    // Calculate the destination data buffer inclusive endpoint.
    addr_dst += obj->config.dst_inc ? endpoint_offset : 0;
    // Recalculate the transfer size.
    transfer_size >>= transfer_size_shift_divisor;
    --transfer_size;

    // Write calculated endpoint addresses and transfer size into channel control structure.
    dma_ch_ctl[ stream ].ch_ctl |= (uint32_t)transfer_size << HAL_LL_DMA_DMACHTL_XFERSIZE_POSITION;
    dma_ch_ctl[ stream ].dst_endp |= addr_dst;
    dma_ch_ctl[ stream ].src_endp |= addr_src;

    return HAL_LL_DMA_SUCCESS;
}

hal_ll_err_t hal_ll_dma_transfer_abort( hal_ll_dma_t *obj ) {
    hal_ll_err_t status = HAL_LL_DMA_SUCCESS;
    dma_handle_t *dma = (dma_handle_t *)obj->handle;
    // Set pointer to 1024 byte aligned address inside dma_ch_ctl_buffer, where actual channel control structure data will be located.
    dma_ch_ctl = (dma_ch_ctl_struct_t *)( ( (uint32_t)dma_ch_ctl_buffer + HAL_LL_DMA_MEMORY_ALLIGN_1024_MASK ) & ~HAL_LL_DMA_MEMORY_ALLIGN_1024_MASK );

    // Disable the stream.
    // Disabling the stream, just pauses it.
    HAL_LL_DMA_STREAM_DISABLE( obj->config.stream );
    // Stop transfer.
    dma_ch_ctl->ch_ctl &= HAL_LL_DMA_DMACHCTL_XFERMODE_STOP;

    return status;
}

static hal_ll_err_t hal_ll_dma_init_hw( hal_ll_dma_t *obj, dma_handle_t *dma, hal_ll_dma_config_t config ) {
    // Set pointer to 1024 byte aligned address inside dma_ch_ctl_buffer, where actual channel control structure data will be located.
    dma_ch_ctl = (dma_ch_ctl_struct_t *)( ( (uint32_t)dma_ch_ctl_buffer + HAL_LL_DMA_MEMORY_ALLIGN_1024_MASK ) & ~HAL_LL_DMA_MEMORY_ALLIGN_1024_MASK );
    uint8_t stream = config.stream;

    // Enable the DMA module.
    HAL_LL_DMA_MODULE_ENABLE;

    // Disable the DMA stream first.
    HAL_LL_DMA_STREAM_DISABLE( stream );

    // Set channel control structure address.
    dma->ctl_base = (uint32_t)dma_ch_ctl;

    // Configure DMA to use the primary channel control structure.
    dma->alt_clr = HAL_LL_DMA_ALTCLR << stream;
    // Allow both single and burst requests.
    dma->use_burst_clr = HAL_LL_DMA_USEBURSTCLR << stream;
    // Allow channel to send requests.
    dma->req_mask_clr = HAL_LL_DMA_REQMASKCLR << stream;
    // Set the desired channel.
    hal_ll_dma_set_channel( dma, stream, config.channel );
    // Set the desired priority.
    hal_ll_dma_set_stream_priority( dma, stream, config.priority );

    // Stream configuration.
    // Clear source endpoint address.
    dma_ch_ctl[ stream ].src_endp = 0;
    // Clear destination endpoint address.
    dma_ch_ctl[ stream ].dst_endp = 0;
    // Clear the stream control word.
    dma_ch_ctl[ stream ].ch_ctl = 0;

    // Set desired direction value.
    dma_ch_ctl[ stream ].ch_ctl |= hal_ll_dma_get_reg_value_direction( config.direction );

    // Set desired memory increment settings.
    dma_ch_ctl[ stream ].ch_ctl |= hal_ll_dma_get_reg_value_src_inc( config.src_inc, config.data_align_source );
    dma_ch_ctl[ stream ].ch_ctl |= hal_ll_dma_get_reg_value_dst_inc( config.dst_inc, config.data_align_source );

    // Set desired data size settings.
    if ( config.data_align_source != config.data_align_destination ) {
        // Source and Destination Data sizes must be equal.
        return HAL_LL_DMA_ERROR;
    }
    if ( ( HAL_LL_DMA_DATA_ALIGN_BYTES_3 == config.data_align_source ) || ( HAL_LL_DMA_DATA_ALIGN_BYTES_3 == config.data_align_destination ) ) {
        // Source and Destination Data sizes cannot be 3 bytes.
        return HAL_LL_DMA_ERROR;
    }
    dma_ch_ctl[ stream ].ch_ctl |= hal_ll_dma_get_reg_value_src_size( config.data_align_source );
    dma_ch_ctl[ stream ].ch_ctl |= hal_ll_dma_get_reg_value_dst_size( config.data_align_source );

    // Set desired burst transfer settings.
    if ( config.burst_size_source != config.burst_size_destination ) {
        // No multiple burst on TIVA.
        return HAL_LL_DMA_ERROR;
    }
    // TODO On TIVA burst size can go up to 1024. Consider adding more enums to cover all of them.
    dma_ch_ctl[ stream ].ch_ctl |= hal_ll_dma_get_reg_value_burst_size( config.burst_size_source );

    // Set desired mode.
    if ( HAL_LL_DMA_MODE_CIRCULAR == config.mode ) {
        // TODO Implement circular mode later, during DMA peripheral synthesis.
        /* NOTE: Channel control structure register do not posses the auto-reloading functionality,
         *       therefore they must be reloaded by software in interrupt routine.
         *       The DMA ISR is not used for this, instead the ISR form the peripheral that is using the DMA is used.
         */
        return HAL_LL_DMA_ERROR;
    }

    return HAL_LL_DMA_SUCCESS;
}

static inline uint8_t hal_ll_dma_get_reg_value_direction( hal_ll_dma_direction_t direction ) {
    volatile uint32_t direction_set = HAL_LL_DMA_DMACHCTL_XFERMODE_BASIC;

    // For M2M direction AUTO mode is used, and for all other directions, BASIC mode is used.
    if ( HAL_LL_DMA_DIRECTION_MEMORY_TO_MEMORY == direction ) {
        direction_set = HAL_LL_DMA_DMACHCTL_XFERMODE_AUTO_REQUEST;
    }

    return direction_set;
}
